notification horn was falling off the header on narrow widths - fixed that

--- a/less/uiv2.less
+++ b/less/uiv2.less
@@ -3085,9 +3085,9 @@ body  {
   }
 
   #searchArea {
-    width: -moz-calc(~"100% - 565px");
-    width: -webkit-calc(~"100% - 565px");
-    width: calc(~"100% - 565px");
+    width: -moz-calc(~"100% - 575px");
+    width: -webkit-calc(~"100% - 575px");
+    width: calc(~"100% - 575px");
   }
   #notifications {
     //right: 112px;
